Closed
Bug 879478
Opened 12 years ago
Closed 12 years ago
[Camera] GraphImpl() returns nullptr on launch, causes app crash
Categories
(Firefox OS Graveyard :: General, defect)
Tracking
(firefox24 fixed)
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| firefox24 | --- | fixed |
People
(Reporter: svantipalli, Assigned: mikeh)
References
Details
(Keywords: crash, regression, topcrash, Whiteboard: [b2g-crash])
Crash Data
Attachments
(1 file, 3 obsolete files)
This bug was filed from the Socorro interface and is
report bp-5f199f8b-2f59-4ed1-8e44-c32612130604 .
=============================================================
Camera app crashed on launch.
Crash id: bp-5f199f8b-2f59-4ed1-8e44-c32612130604
Steps to reproduce:
1) Flash the Unagi nightly build: 2013-06-04-03-07-04
2)Launch the Camera app.
3)Observe that the app crashes with a message "Camera just crashed".
Expected Behavior:
The Camera app should launch successfully and perform the required functions.
Actual Behavior:
The camera crashes on launch.
Build: 20130604030704
Updated•12 years ago
|
Whiteboard: [b2g-crash]
Comment 2•12 years ago
|
||
Just to emphasize ... bp-9319720b-42bf-4325-bd92-5887b2130605 (and other crashes from bug 878810) are on Geeksphone Peek with their nightly images (from http://downloads.geeksphone.com/peak_nightly/latest.html of the day it crashed).
Updated•12 years ago
|
Summary: [Unagi][Camera] App crashes on Launch → [Camera] App crashes on Launch
| Assignee | ||
Updated•12 years ago
|
Summary: [Camera] App crashes on Launch → [Camera][peak] App crashes on Launch
| Assignee | ||
Comment 4•12 years ago
|
||
Never mind--this isn't Peak-specific, according to the crash reports in comment 0. (Got sucked in by byg 878810.)
Is the unagi nightly build based on mozilla-central, or the b2g18 branch? Asking because the links in the crash report take me to mozilla-central.
Looking at the crash report, the cause could be one of the assertions at the beginning of this function: http://hg.mozilla.org/mozilla-central/annotate/7e3a4ebcf067/content/media/MediaStreamGraph.cpp#l1430
Summary: [Camera][peak] App crashes on Launch → [Camera] App crashes on Launch
Comment 5•12 years ago
|
||
There is another possibility. Bug 843599 might regress the crash. The patch removes old GrallocBufferActor::Create().
| Assignee | ||
Comment 6•12 years ago
|
||
Unable to reproduce on Unagi DEBUG build with:
- gecko: b2g18:eff45c60396e
- gaia: v1.0.1:37b6527c3f73a497f75d057e90386f77ff5a552b
Camera works as expected, takes pictures, records videos, displays/plays back both properly.
Comment 7•12 years ago
|
||
(In reply to Mike Habicher [:mikeh] from comment #6)
> Unable to reproduce on Unagi DEBUG build with:
> - gecko: b2g18:eff45c60396e
> - gaia: v1.0.1:37b6527c3f73a497f75d057e90386f77ff5a552b
It's a trunk bug not a B2G-18.0 one.
| Assignee | ||
Comment 8•12 years ago
|
||
logcat shows:
06-06 14:15:25.914 440 454 I PRLog : 27281432[4520b380]: picture preview: wanted 576 x 432, got 576 x 432 (30 fps, format 2)
06-06 14:15:25.914 440 454 I PRLog : 27281432[4520b380]: mozilla::GetPreviewStreamResult::GetPreviewStreamResult(mozilla::CameraControlImpl*, uint32_t, uint32_t, uint32_t, nsMainThreadPtrHandle<nsICameraPreviewStreamCallback>&, uint64_t):197 : this=44d03940
06-06 14:15:25.914 440 454 I PRLog : 27281432[4520b380]: virtual mozilla::GetPreviewStreamTask::~GetPreviewStreamTask():232 : this=4521a0a0
06-06 14:15:25.924 108 281 D memalloc: /dev/pmem: Allocated buffer base:0x4ac00000 size:81920 offset:1228800 fd:108
06-06 14:15:25.924 440 440 D memalloc: /dev/pmem: Mapped buffer base:0x45bfc000 size:1310720 offset:1228800 fd:38
06-06 14:15:25.934 108 281 D memalloc: /dev/pmem: Allocated buffer base:0x4ac00000 size:81920 offset:1310720 fd:113
06-06 14:15:25.934 440 440 D memalloc: /dev/pmem: Mapped buffer base:0x45d49000 size:1392640 offset:1310720 fd:41
06-06 14:15:25.944 440 440 I PRLog : 1074664696[42cfc080]: mozilla::DOMCameraPreview::DOMCameraPreview(nsGlobalWindow*, mozilla::ICameraControl*, uint32_t, uint32_t, uint32_t):156 : this=44de76b0 : mWidth=576, mHeight=432, mFramesPerSecond=30
06-06 14:15:25.944 440 440 I PRLog : 1074664696[42cfc080]: DOMCameraPreviewListener::DOMCameraPreviewListener(mozilla::DOMCameraPreview*):87 : this=44a92df0
06-06 14:15:26.204 440 440 I PRLog : 1074664696[42cfc080]: virtual mozilla::GetPreviewStreamResult::~GetPreviewStreamResult():202 : this=44d03940
06-06 14:15:26.204 440 440 F libc : Fatal signal 11 (SIGSEGV) at 0x00000080 (code=1)
| Assignee | ||
Comment 9•12 years ago
|
||
Program received signal SIGSEGV, Segmentation fault.
mozilla::MediaStreamGraphImpl::AppendMessage (this=0x0, aMessage=0x4561d4a0)
at /home/mikeh/dev/mozilla/m-c/src/content/media/MediaStreamGraph.cpp:1437
1437 if (mDetectedNotRunning &&
(gdb) bt
#0 mozilla::MediaStreamGraphImpl::AppendMessage (this=0x0, aMessage=0x4561d4a0)
at /home/mikeh/dev/mozilla/m-c/src/content/media/MediaStreamGraph.cpp:1437
#1 0x40a1f130 in mozilla::MediaStream::AddListener (this=0x42cbbce0, aListener=0x4563d160)
at /home/mikeh/dev/mozilla/m-c/src/content/media/MediaStreamGraph.cpp:1718
#2 0x40996006 in mozilla::dom::HTMLMediaElement::SetupSrcMediaStreamPlayback (this=0x43165e80,
aStream=<value optimized out>)
at /home/mikeh/dev/mozilla/m-c/src/content/html/content/src/HTMLMediaElement.cpp:2628
#3 0x40999554 in mozilla::dom::HTMLMediaElement::SelectResource (this=0x43165e80)
at /home/mikeh/dev/mozilla/m-c/src/content/html/content/src/HTMLMediaElement.cpp:784
#4 0x409996d0 in mozilla::dom::HTMLMediaElement::SelectResourceWrapper (this=0x0)
at /home/mikeh/dev/mozilla/m-c/src/content/html/content/src/HTMLMediaElement.cpp:751
#5 0x40992164 in mozilla::dom::nsSyncSection::Run (this=0x4507b340)
at /home/mikeh/dev/mozilla/m-c/src/content/html/content/src/HTMLMediaElement.cpp:675
#6 0x40fb3b48 in nsBaseAppShell::RunSyncSectionsInternal (this=0x44b4a820,
aStable=<value optimized out>, aThreadRecursionLevel=<value optimized out>)
at /home/mikeh/dev/mozilla/m-c/src/widget/xpwidgets/nsBaseAppShell.cpp:352
#7 0x40fb3e06 in nsBaseAppShell::RunSyncSections (this=0x0, thr=<value optimized out>,
recursionDepth=1120648416) at /home/mikeh/dev/mozilla/m-c/src/widget/xpwidgets/nsBaseAppShell.h:89
#8 nsBaseAppShell::AfterProcessNextEvent (this=0x0, thr=<value optimized out>, recursionDepth=1120648416)
at /home/mikeh/dev/mozilla/m-c/src/widget/xpwidgets/nsBaseAppShell.cpp:408
#9 0x4137f974 in nsThread::ProcessNextEvent (this=0x42cc9710, mayWait=false, result=0xbeee1dc7)
at /home/mikeh/dev/mozilla/m-c/src/xpcom/threads/nsThread.cpp:639
#10 0x413489be in NS_ProcessNextEvent (thread=0x42cc9710, mayWait=false)
at /home/mikeh/dev/mozilla/btg025/objdir-gecko-mc-debug/xpcom/build/nsThreadUtils.cpp:238
#11 0x4102c834 in mozilla::ipc::MessagePump::Run (this=0x42c013d0, aDelegate=0xbeee2884)
at /home/mikeh/dev/mozilla/m-c/src/ipc/glue/MessagePump.cpp:82
#12 0x4102c9b4 in mozilla::ipc::MessagePumpForChildProcess::Run (this=0x42c013d0, aDelegate=0xbeee2884)
at /home/mikeh/dev/mozilla/m-c/src/ipc/glue/MessagePump.cpp:231
#13 0x413c2702 in MessageLoop::RunInternal (this=0xbeee2884)
at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:219
#14 0x413c2746 in MessageLoop::RunHandler (this=0xbeee2884)
at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:212
#15 MessageLoop::Run (this=0xbeee2884)
at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:186
#16 0x40fb358a in nsBaseAppShell::Run (this=0x44b4a820)
at /home/mikeh/dev/mozilla/m-c/src/widget/xpwidgets/nsBaseAppShell.cpp:163
#17 0x4045c552 in XRE_RunAppShell ()
at /home/mikeh/dev/mozilla/m-c/src/toolkit/xre/nsEmbedFunctions.cpp:685
#18 0x4102c91e in mozilla::ipc::MessagePumpForChildProcess::Run (this=0x42c013d0, aDelegate=0xbeee2884)
at /home/mikeh/dev/mozilla/m-c/src/ipc/glue/MessagePump.cpp:198
#19 0x413c2702 in MessageLoop::RunInternal (this=0xbeee2884)
at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:219
#20 0x413c2746 in MessageLoop::RunHandler (this=0xbeee2884)
at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:212
#21 MessageLoop::Run (this=0xbeee2884)
at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:186
#22 0x4045ce2c in XRE_InitChildProcess (aArgc=2, aArgv=0xbeee2998, aProcess=1120855040)
at /home/mikeh/dev/mozilla/m-c/src/toolkit/xre/nsEmbedFunctions.cpp:522
#23 0x0000867e in main (argc=7, argv=0xbeee2a14)
at /home/mikeh/dev/mozilla/m-c/src/ipc/app/MozillaRuntimeMain.cpp:60
| Assignee | ||
Comment 10•12 years ago
|
||
In comment 9, it looks like 'this' in frame 0/AppendMessage() is a nullptr.
Confirmed from the callsite in frame 1:
(gdb) frame 1
#1 0x40a1f130 in mozilla::MediaStream::AddListener (this=0x42cbbce0, aListener=0x4563d160)
at /home/mikeh/dev/mozilla/m-c/src/content/media/MediaStreamGraph.cpp:1718
1718 GraphImpl()->AppendMessage(new Message(this, aListener));
(gdb) list
1713 {
1714 mStream->AddListenerImpl(mListener.forget());
1715 }
1716 nsRefPtr<MediaStreamListener> mListener;
1717 };
1718 GraphImpl()->AppendMessage(new Message(this, aListener));
1719 }
1720
1721 void
1722 MediaStream::RemoveListenerImpl(MediaStreamListener* aListener)
(gdb) p GraphImpl()
$1 = (class mozilla::MediaStreamGraphImpl *) 0x0
(gdb)
| Assignee | ||
Updated•12 years ago
|
Summary: [Camera] App crashes on Launch → [Camera] GraphImpl() returns nullptr on launch, causes app crash
| Assignee | ||
Comment 11•12 years ago
|
||
GraphImpl() just returns MediaStream::mGraph; looks like this isn't getting set (i.e. no call to SetGraphImpl()[1]).
I'm guessing there's been some divergence between the core MediaStream and the b2g camera-specific implementation[2].
1. http://mxr.mozilla.org/mozilla-central/source/content/media/MediaStreamGraph.cpp#1491
2. http://mxr.mozilla.org/mozilla-central/source/dom/camera/CameraPreviewMediaStream.cpp
| Assignee | ||
Comment 12•12 years ago
|
||
sotaro, was the call to CreateSourceStream()[1] intentionally dropped in moving to CameraPreviewMediaStream?
1. http://mxr.mozilla.org/mozilla-central/source/dom/camera/DOMCameraPreview.cpp?rev=2512bb04bbe0#159
Flags: needinfo?(sotaro.ikeda.g)
Comment 13•12 years ago
|
||
(In reply to Mike Habicher [:mikeh] from comment #12)
> sotaro, was the call to CreateSourceStream()[1] intentionally dropped in
> moving to CameraPreviewMediaStream?
>
> 1.
> http://mxr.mozilla.org/mozilla-central/source/dom/camera/DOMCameraPreview.
> cpp?rev=2512bb04bbe0#159
Yes, I created CameraPreviewMediaStream not to use MediaStreamGraph at all as a short term solution. Current can not provide enough capability and quality for camera preview.
roc is going to change MediaStreamGraph in future. In web rendering work week in Taipei, roc talked about the plan to fix a lot of problems around MediaStreamGraph. Until the fix is implemented, camera preview can not use MediaStreamGraph.
Flags: needinfo?(sotaro.ikeda.g)
| Assignee | ||
Comment 14•12 years ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #13)
>
> roc is going to change MediaStreamGraph in future. In web rendering work
> week in Taipei, roc talked about the plan to fix a lot of problems around
> MediaStreamGraph. Until the fix is implemented, camera preview can not use
> MediaStreamGraph.
Does that mean there is no fix for the camera preview until then?
Comment 15•12 years ago
|
||
(In reply to Mike Habicher [:mikeh] from comment #14)
> (In reply to Sotaro Ikeda [:sotaro] from comment #13)
> >
> > roc is going to change MediaStreamGraph in future. In web rendering work
> > week in Taipei, roc talked about the plan to fix a lot of problems around
> > MediaStreamGraph. Until the fix is implemented, camera preview can not use
> > MediaStreamGraph.
>
> Does that mean there is no fix for the camera preview until then?
There is no other choice now. It seems that roc is going to implement for v1.2.
| Assignee | ||
Comment 16•12 years ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #15)
>
> There is no other choice now. It seems that roc is going to implement for v1.2.
roc, is there anything relatively simple we can do to get the camera preview working in the meantime?
Flags: needinfo?(roc)
Can we bring forward Sotaro's camera preview solution as a stop-gap for central?
Flags: needinfo?(roc)
| Assignee | ||
Comment 18•12 years ago
|
||
(In reply to Robert O'Callahan (:roc) (Mozilla Corporation) from comment #17)
>
> Can we bring forward Sotaro's camera preview solution as a stop-gap for central?
Sotaro's camera preview code is already in central.
I've made sure that MediaStream::mGraph is set to a valid value, but after some digging, it looks like this change[1] changed a bunch of the MediaStream members (which CameraPreviewMediaStream subclasses) to non-virtual, so that HTMLMediaElement::SetupSrcMediaStreamPlayback() is hitting the wrong implementation.
1. http://hg.mozilla.org/mozilla-central/diff/45e88ec6ac1f/content/media/MediaStreamGraph.h
Keywords: regression
| Assignee | ||
Comment 19•12 years ago
|
||
With this patch, the camera doesn't crash on a nullptr any more, and the camera preview stream gets started.
It now blows up in the b2g parent process:
Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 593.613]
0x41d55e26 in BytesPerPixelForPixelFormat (aSize=..., aFormat=<value optimized out>, aUsage=<value optimized out>, aOutHandle=0x476ffb64) at /home/mikeh/dev/mozilla/m-c/src/gfx/layers/ipc/ShadowLayerUtilsGralloc.cpp:169
169 MOZ_NOT_REACHED("Unknown gralloc pixel format");
(gdb) bt
#0 0x41d55e26 in BytesPerPixelForPixelFormat (aSize=..., aFormat=<value optimized out>, aUsage=<value optimized out>, aOutHandle=0x476ffb64) at /home/mikeh/dev/mozilla/m-c/src/gfx/layers/ipc/ShadowLayerUtilsGralloc.cpp:169
#1 mozilla::layers::GrallocBufferActor::Create (aSize=..., aFormat=<value optimized out>, aUsage=<value optimized out>, aOutHandle=0x476ffb64) at /home/mikeh/dev/mozilla/m-c/src/gfx/layers/ipc/ShadowLayerUtilsGralloc.cpp:244
#2 0x41d7bdd6 in mozilla::layers::ImageBridgeParent::AllocPGrallocBuffer (this=<value optimized out>, aSize=<value optimized out>, aFormat=<value optimized out>, aUsage=<value optimized out>, aOutHandle=0x476ffb64)
at /home/mikeh/dev/mozilla/m-c/src/gfx/layers/ipc/ImageBridgeParent.cpp:123
#3 0x41a67252 in mozilla::layers::PImageBridgeParent::OnMessageReceived (this=0x4939f320, __msg=<value optimized out>, __reply=@0x476ffc44) at /home/mikeh/dev/mozilla/btg025/objdir-gecko-mc-debug/ipc/ipdl/PImageBridgeParent.cpp:564
#4 0x41978cdc in mozilla::ipc::SyncChannel::OnDispatchMessage (this=0x4939f330, msg=...) at /home/mikeh/dev/mozilla/m-c/src/ipc/glue/SyncChannel.cpp:145
#5 0x419769e6 in mozilla::ipc::RPCChannel::OnMaybeDequeueOne (this=0x4939f330) at /home/mikeh/dev/mozilla/m-c/src/ipc/glue/RPCChannel.cpp:400
#6 0x4194504a in DispatchToMethod<mozilla::dom::ContentParent, void (mozilla::dom::ContentParent::*)()> (this=<value optimized out>) at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/tuple.h:383
#7 RunnableMethod<mozilla::dom::ContentParent, void (mozilla::dom::ContentParent::*)(), Tuple0>::Run (this=<value optimized out>) at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/task.h:307
#8 0x41974fc6 in mozilla::ipc::RPCChannel::RefCountedTask::Run (this=0x4668a9e0) at ../../dist/include/mozilla/ipc/RPCChannel.h:425
#9 mozilla::ipc::RPCChannel::DequeueTask::Run (this=0x4668a9e0) at ../../dist/include/mozilla/ipc/RPCChannel.h:448
#10 0x41d0a1a0 in MessageLoop::RunTask (this=0x476ffdc8, task=0x4668a9e0) at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:337
#11 0x41d0a8e2 in MessageLoop::DeferOrRunPendingTask (this=0x4668a9e0, pending_task=<value optimized out>) at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:345
#12 0x41d0b548 in MessageLoop::DoWork (this=0x476ffdc8) at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:445
#13 0x41d0b890 in base::MessagePumpDefault::Run (this=0x456c8640, delegate=0x476ffdc8) at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_pump_default.cc:23
#14 0x41d0a6ba in MessageLoop::RunInternal (this=0x476ffdc8) at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:219
#15 0x41d0a6fe in MessageLoop::RunHandler (this=0x476ffdc8) at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:212
#16 MessageLoop::Run (this=0x476ffdc8) at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/message_loop.cc:186
#17 0x41d147e8 in base::Thread::ThreadMain (this=0x456c67f0) at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/thread.cc:160
#18 0x41d1ac9c in ThreadFunc (closure=0x1) at /home/mikeh/dev/mozilla/m-c/src/ipc/chromium/src/base/platform_thread_posix.cc:39
#19 0x40065e18 in __thread_entry (func=0x41d1ac95 <ThreadFunc>, arg=0x456c67f0, tls=<value optimized out>) at bionic/libc/bionic/pthread.c:217
#20 0x4006596c in pthread_create (thread_out=<value optimized out>, attr=0xbefe2288, start_routine=0x41d1ac95 <ThreadFunc>, arg=0x456c67f0) at bionic/libc/bionic/pthread.c:357
#21 0x00000000 in ?? ()
I had to go up to frame 3 to find out the value of 'format': 17.
(gdb) frame 3
#3 0x41a67252 in mozilla::layers::PImageBridgeParent::OnMessageReceived (this=0x4939f320, __msg=<value optimized out>, __reply=@0x476ffc44) at /home/mikeh/dev/mozilla/btg025/objdir-gecko-mc-debug/ipc/ipdl/PImageBridgeParent.cpp:564
564 actor = AllocPGrallocBuffer(size, format, usage, (&(handle)));
(gdb) p format
$5 = 17
| Assignee | ||
Comment 20•12 years ago
|
||
I'm not sure where this value is getting set, but 17 (0x11) corresponds to an unused, reserved value[1].
1. https://mxr.mozilla.org/mozilla-central/source/media/omx-plugin/include/ics/pixelflinger/format.h#44
| Assignee | ||
Comment 21•12 years ago
|
||
With the above WIP patch and the patch in bug 880268, the camera viewfinder no longer crashes, but it doesn't display properly either. It is mostly green, with some moving black and lighter green bars. (It looks not unlike a crashed Atari 2600 game.)
| Assignee | ||
Comment 22•12 years ago
|
||
I also tested bug 880268 attachment 759674 [details] [diff] [review], but it produced the same visual result.
| Assignee | ||
Comment 23•12 years ago
|
||
While taking the screenshot, I noticed that for a very brief instance, the _correct_ viewfinder image appeared on the screen, before going back to what is shown in this attachment.
So the correct image is in there _somewhere_.
| Assignee | ||
Comment 24•12 years ago
|
||
Comment on attachment 759812 [details] [diff] [review]
Populate mGraph, re-virtual-ize MediaStream methods
This patch addresses the media issues on m-c; there are other bugs that need fixing to get the camera/viewfinder working again.
Attachment #759812 -
Attachment description: WIP - populate mGraph, re-virtual-ize MediaStream methods → Populate mGraph, re-virtual-ize MediaStream methods
Attachment #759812 -
Flags: feedback?(roc) → review?(roc)
Comment on attachment 759812 [details] [diff] [review]
Populate mGraph, re-virtual-ize MediaStream methods
Review of attachment 759812 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/camera/CameraPreviewMediaStream.h
@@ +35,5 @@
> virtual void RemoveAudioOutput(void* aKey);
> virtual void AddVideoOutput(VideoFrameContainer* aContainer);
> virtual void RemoveVideoOutput(VideoFrameContainer* aContainer);
> virtual void ChangeExplicitBlockerCount(int32_t aDelta);
> virtual void AddListener(MediaStreamListener* aListener);
Make these MOZ_OVERRIDE so I don't break this again!
Attachment #759812 -
Flags: review?(roc) → review+
Comment 26•12 years ago
|
||
I just tested this with the rest of the b2g WebRTC patchset and it still seems to crash
on:
http://mozilla.github.io/webrtc-landing/gum_test.html
Comment 27•12 years ago
|
||
My bad. I got all the patches applied and now it just looks terrible, as in
MikeH's picture.
This should work.
Updated•12 years ago
|
Component: Gaia::Camera → General
| Assignee | ||
Comment 29•12 years ago
|
||
(In reply to Robert O'Callahan (:roc) (Mozilla Corporation) from comment #28)
> Created attachment 760290 [details] [diff] [review]
> back out 868405 on central
>
> This should work.
Hi roc, I tried that patch but no luck--the viewfinder is still corrupted.
Component: General → Gaia::Camera
| Assignee | ||
Comment 30•12 years ago
|
||
Add in MOZ_OVERRIDE clauses as per comment 25; carrying r+ forward.
Attachment #759812 -
Attachment is obsolete: true
| Assignee | ||
Comment 31•12 years ago
|
||
try-server push: https://tbpl.mozilla.org/?tree=Try&rev=00e128954c78
(In reply to Mike Habicher [:mikeh] from comment #29)
> (In reply to Robert O'Callahan (:roc) (Mozilla Corporation) from comment #28)
> > Created attachment 760290 [details] [diff] [review]
> > back out 868405 on central
> >
> > This should work.
>
> Hi roc, I tried that patch but no luck--the viewfinder is still corrupted.
Sorry. Well, I guess it's not actually a regressoin from bug 868405 then.
| Assignee | ||
Comment 33•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Comment 34•12 years ago
|
||
(In reply to Mike Habicher [:mikeh] from comment #33)
> https://hg.mozilla.org/integration/mozilla-inbound/rev/838ec139ac83
Not to be a process stickler, but tree management usually wants the target milestone field set when you land on inbound and have to bug remain open until the patch lands on central.
Status: RESOLVED → REOPENED
Component: Gaia::Camera → General
Resolution: FIXED → ---
| Assignee | ||
Comment 35•12 years ago
|
||
(In reply to Jason Smith [:jsmith] from comment #34)
>
> Not to be a process stickler, but tree management usually wants the target
> milestone field set when you land on inbound and have to bug remain open
> until the patch lands on central.
Not a problem--I respect process. Sorry about that!
Comment 36•12 years ago
|
||
You should also ask for a formal review of the patch with the review flag. We don't even know which one landed.
status-firefox24:
--- → fixed
| Assignee | ||
Updated•12 years ago
|
Attachment #760290 -
Attachment is obsolete: true
| Assignee | ||
Comment 37•12 years ago
|
||
Comment on attachment 759850 [details]
Screenshot of camera viewfinder
See bug 880780.
Attachment #759850 -
Attachment is obsolete: true
Updated•12 years ago
|
Crash Signature: [@ mozilla::MediaStreamGraphImpl::AppendMessage(mozilla::ControlMessage*)] → [@ mozilla::MediaStreamGraphImpl::AppendMessage(mozilla::ControlMessage*)]
[@ libxul.so@0x6b1a0e | libxul.so@0x6b1e17 | libxul.so@0x18fa6b2 | libxul.so@0x663485 | libxul.so@0x43d51d | libxul.so@0x18fa6b2 | libxul.so@0x66553f | libxul.so@0x6658d7 | libmoz…
Comment 38•12 years ago
|
||
Status: REOPENED → RESOLVED
Closed: 12 years ago → 12 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•