Bug 879478 - fix regressions when starting camera (crash and de-virtualized functions -- see also bug 880780), r=roc