dom/camera/CameraPreviewMediaStream.h
@@ -23,26 +23,21 @@ public:
  * A camera preview requests no delay and no buffering stream.
  * But the SourceMediaStream do not support it.
  */
-class CameraPreviewMediaStream : public MediaStream {
+class CameraPreviewMediaStream : public MediaStream
+{
   typedef mozilla::layers::Image Image;
 
 public:
-  CameraPreviewMediaStream(DOMMediaStream* aWrapper) :
-    MediaStream(aWrapper),
-    mMutex("mozilla::camera::CameraPreviewMediaStream"),
-    mFrameCallback(nullptr)
-  {
-    mIsConsumed = false;
-  }
+  CameraPreviewMediaStream(DOMMediaStream* aWrapper);
 
-  virtual void AddAudioOutput(void* aKey);
-  virtual void SetAudioOutputVolume(void* aKey, float aVolume);
-  virtual void RemoveAudioOutput(void* aKey);
-  virtual void AddVideoOutput(VideoFrameContainer* aContainer);
-  virtual void RemoveVideoOutput(VideoFrameContainer* aContainer);
-  virtual void ChangeExplicitBlockerCount(int32_t aDelta);
-  virtual void AddListener(MediaStreamListener* aListener);
-  virtual void RemoveListener(MediaStreamListener* aListener);
+  virtual void AddAudioOutput(void* aKey) MOZ_OVERRIDE;
+  virtual void SetAudioOutputVolume(void* aKey, float aVolume) MOZ_OVERRIDE;
+  virtual void RemoveAudioOutput(void* aKey) MOZ_OVERRIDE;
+  virtual void AddVideoOutput(VideoFrameContainer* aContainer) MOZ_OVERRIDE;
+  virtual void RemoveVideoOutput(VideoFrameContainer* aContainer) MOZ_OVERRIDE;
+  virtual void ChangeExplicitBlockerCount(int32_t aDelta) MOZ_OVERRIDE;
+  virtual void AddListener(MediaStreamListener* aListener) MOZ_OVERRIDE;
+  virtual void RemoveListener(MediaStreamListener* aListener) MOZ_OVERRIDE;
   virtual void Destroy();
 
   // Call these on any thread.
@@ -59,7 +54,6 @@ protected:
   Mutex mMutex;
   CameraPreviewFrameCallback* mFrameCallback;
 };
-
 
 }
 
